hello-k8.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-hello-deployment
  labels:
    app: nginx-hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-hello
  template:
    metadata:
      labels:
        app: nginx-hello
    spec:
      containers:
      - name: nginx-hello-container
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello-service
spec:
  type: ClusterIP
  selector:
    app: nginx-hello
  ports:
  - port: 8080
    targetPort: 80
